Update carousel images from SVG to JPG format

--- a/index.html
+++ b/index.html
@@ -32,10 +32,10 @@
     <section class="hero" aria-label="Galeria de fotos">
       <div class="carousel" aria-live="polite">
         <div class="slide active"><img src="assets/slide1.svg" alt="MC Music ao vivo — foto 1"></div>
-        <div class="slide"><img src="assets/slide2.svg" alt="MC Music ao vivo — foto 2"></div>
-        <div class="slide"><img src="assets/slide3.svg" alt="MC Music ao vivo — foto 3"></div>
-        <div class="slide"><img src="assets/slide4.svg" alt="MC Music ao vivo — foto 4"></div>
-        <div class="slide"><img src="assets/slide5.svg" alt="MC Music ao vivo — foto 5"></div>
+        <div class="slide"><img src="assets/slide2.jpg" alt="MC Music ao vivo — foto 2"></div>
+        <div class="slide"><img src="assets/slide3.jpg" alt="MC Music ao vivo — foto 3"></div>
+        <div class="slide"><img src="assets/slide4.jpg" alt="MC Music ao vivo — foto 4"></div>
+        <div class="slide"><img src="assets/slide5.jpg" alt="MC Music ao vivo — foto 5"></div>
         <button class="ctrl prev" aria-label="Anterior">‹</button>
         <button class="ctrl next" aria-label="Seguinte">›</button>
         <div class="dots" role="tablist" aria-label="Selecionar imagem da galeria"></div>
